<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smstype" />

    <RadioGroup
        android:id="@+id/sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excel" />

        <RadioButton
            android:id="@+id/xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacttype" />

    <RadioGroup
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@id/excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excel" />

        <RadioButton
            android:id="@id/xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml" />

        <RadioButton
            android:id="@+id/csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/csv" />
    </RadioGroup>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok" />

</LinearLayout>